--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node ./dist/index2.js",
+    "start": "node ./dist/index.js",
     "dev": "ts-node index.ts",
     "docker:build": "docker buildx build --platform linux/amd64 -t firehose .",
     "docker:run": "docker run --platform linux/amd64 --env-file .env firehose",
-    "docker:push": "npm run docker:build && docker tag firehose:latest 641120096525.dkr.ecr.us-east-1.amazonaws.com/firehose:latest && docker push 641120096525.dkr.ecr.us-east-1.amazonaws.com/firehose:latest",
-    "docker:login": "aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 641120096525.dkr.ecr.us-east-1.amazonaws.com",
+    "docker:push": "npm run docker:build && docker tag firehose:latest <INSERT-AWS-ID>.dkr.ecr.<INSERT-AWS-REGION>.amazonaws.com/firehose:latest && docker push <INSERT-AWS-ID>.dkr.ecr.us-east-1.amazonaws.com/firehose:latest",
+    "docker:login": "aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin <INSERT-AWS-ID>.dkr.ecr.<INSERT-AWS-REGION>.amazonaws.com",
     "docker": "npm run docker:build && npm run docker:run"
   },
   "keywords": [],
